--- a/prepos/pug/base/footer.pug
+++ b/prepos/pug/base/footer.pug
@@ -6,18 +6,18 @@ footer
      .footer--logo
       a(href="index.html")
        .logo.logo--footer: img(src="img/brand/imagotipo_rgb.png", alt="logo brand")
-    .col-md-1.d-none.d-md-block.offset-md-3
+    .col-md-1.d-none.d-md-block.offset-md-4
      h5 Compañia
      a(href="#"): p Acerca de
      a(href="#"): p Contacto
     .col-md-1.d-none.d-md-block.companiabottom
      a(href="#"): p Ayuda
      a(href="#"): p Blog
-    .col-md-1.d-none.d-md-block.offset-md-1
+    .col-md-1.d-none.d-md-block
      h5 Servicios
      a(href="#"): p Categorías
      a(href="#"): p Proyectos
-   .pd--monlogo.container
+   .pd--monlogo.container.d-none.d-sm-block
     .d-flex.justify-content-center.justify-content-md-start
      a(href="#"): p.p-1 © monlogo
      a(href="#"): p.p-1 Condiciones
@@ -28,6 +28,22 @@ footer
      a(href="#", class="ml-md-auto"): img(src="img/iconos/facebook.png", alt="facebook")
      a(href="#"): img(src="img/iconos/instagram.png", class="", alt="instagram")
      a(href="#"): img(src="img/iconos/whatsapp.png", class="", alt="facebook")
+   .pd--monlogo.container.d-block.d-sm-none
+    .row.d-flex.justify-content-center
+     .col-12
+      a(href="#"): p.p-1.text-center © monlogo
+     .col-12
+      a(href="#"): p.p-1 Condiciones
+      a(href="#"): p.p-1 Ayuda
+      a(href="#"): p.p-1 Mapa del sitio
+     .col-12
+      img(src="img/iconos/planeta.png", class="img__planeta", alt="planeta")
+      a(href="#"): p.p-1 español
+      a(href="#"): p.p-1 English
+     .col-12
+      a(href="#", class="ml-md-auto"): img(src="img/iconos/facebook.png", alt="facebook")
+      a(href="#"): img(src="img/iconos/instagram.png", class="", alt="instagram")
+      a(href="#"): img(src="img/iconos/whatsapp.png", class="", alt="facebook")
 
 // Optional JavaScript
 // jQuery first, then Popper.js, then Bootstrap JS
