--- a/prepos/pug/components/contact_1.pug
+++ b/prepos/pug/components/contact_1.pug
@@ -1,14 +1,14 @@
 .container
  .row
-  .col-md-7
+  .col-md-7.col-12
    .contact-1__title
     .contact-1--text
      h4.text-left Lorem ipsum dolor ipsum dolor
      .line__vertical-06
      h6.text-left Vestibulum ut dui sed odio elementum facilisis non sed orci. lobortis. Maecenas leo nulla, ornare varius diam eget, commodo. ornare varius diam eget, commodo.
-  .col-md-2.contact__btn
+  .col-md-2.col-6.d-flex.justify-content-end.contact__btn.p-0
    a(href="#")
     button(type="button", class="btn btn-lighting") Contactenos
-  .col-md-3.contact__btn
+  .col-md-3.col-6.contact__btn.p-0
    a(href="#")
     button(type="button", class="btn btn-secondary") Cómo funcionamos
