--- a/prepos/sass/components/_header.scss
+++ b/prepos/sass/components/_header.scss
@@ -22,7 +22,7 @@
             color: $color-grey;
         }
         &:active {
-            text-decoration: underline wavy $color-variation;
+            text-decoration: underline solid $color-variation;
         }
     }
 }
