--- a/prepos/sass/components/_footer.scss
+++ b/prepos/sass/components/_footer.scss
@@ -28,6 +28,10 @@
         position: relative;
         top: 32px;
     }
+    .col-md-1 {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 .logo.logo--footer {
     img {
