--- a/prepos/sass/components/_modus.scss
+++ b/prepos/sass/components/_modus.scss
@@ -8,8 +8,9 @@
     &__title {
         display: flex;
         justify-content: center;
+        padding-bottom: 20px;
         &--text {
-            width: 600px;
+            width: 550px;
         }
         h1 {
             color: $color-lighting;
@@ -17,20 +18,33 @@
         h5 {
             color: $color-lighting;
             font-family: $font2;
+            font-size: $fontS2 - 2;
         }
     }
     &__object {
         width: 100%;
-        h4 {
+        h3 {
             padding-top: 10px;
             color: $color-lighting;
         }
         h6 {
             color: $color-lighting;
         }
-        img {
+        .modus__box {
+            padding-top: 10px;
+            padding-left: 20px;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
+        }
+        .modus--img {
+            width: 400px;
+            height: 250px;
+            position: relative;
+            img {
+                object-fit: cover;
+                width: 120%;
+                height: 100%;
+            }
         }
     }
 }
