Nueva pagina y arreglos

--- a/prepos/pug/base/footer.pug
+++ b/prepos/pug/base/footer.pug
@@ -14,8 +14,8 @@ footer
      a(href="#"): p Ayuda
      a(href="#"): p Blog
     .col-md-1.d-none.d-md-block
-     h5 Servicios
-     a(href="#"): p Categorías
+     h5 ¿Qué hacemos?
+     a(href="servicios.html"): p Servicios
      a(href="#"): p Proyectos
    .pd--monlogo.container.d-none.d-sm-block
     .d-flex.justify-content-center.justify-content-md-start
@@ -26,8 +26,8 @@ footer
      a(href="#"): p.p-1 español
      a(href="#"): p.p-1 English
      a(href="#", class="ml-md-auto"): img(src="img/iconos/facebook.png", alt="facebook")
-     a(href="#"): img(src="img/iconos/instagram.png", class="", alt="instagram")
-     a(href="#"): img(src="img/iconos/whatsapp.png", class="", alt="facebook")
+     a(href="https://www.instagram.com/monlogoteam"): img(src="img/iconos/instagram.png", class="", alt="instagram")
+     a(href="https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"): img(src="img/iconos/whatsapp.png", class="", alt="facebook")
    .pd--monlogo.container.d-block.d-sm-none
     .row.d-flex.justify-content-center
      .col-12
@@ -42,8 +42,8 @@ footer
       a(href="#"): p.p-1 English
      .col-12
       a(href="#", class="ml-md-auto"): img(src="img/iconos/facebook.png", alt="facebook")
-      a(href="#"): img(src="img/iconos/instagram.png", class="", alt="instagram")
-      a(href="#"): img(src="img/iconos/whatsapp.png", class="", alt="facebook")
+      a(href="https://www.instagram.com/monlogoteam"): img(src="img/iconos/instagram.png", class="", alt="instagram")
+      a(href="https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda"): img(src="img/iconos/whatsapp.png", class="", alt="facebook")
 
 // Optional JavaScript
 // jQuery first, then Popper.js, then Bootstrap JS
