--- a/prepos/pug/base/header.pug
+++ b/prepos/pug/base/header.pug
@@ -9,9 +9,9 @@ header.header
    div(class="collapse navbar-collapse", id="navbarSupportedContent")
     ul(class="navbar-nav mr-auto")
      li.nav-item
-      a(class="nav-link", href="#") Home
+      a(class="nav-link", href="index.html") Home
      li.nav-item
-      a(class="nav-link", href="#") Categorías
+      a(class="nav-link", href="servicios.html") Servicios
      li.nav-item
       a(class="nav-link", href="#") Cómo funcionamos
      li.nav-item
@@ -23,9 +23,9 @@ header.header
       a(class="nav-link", href="#")
        img(src="img/iconos/facebook.png", class="iconos__menu", alt="icono facebook")
      li.nav-item
-      a(class="nav-link", href="#")
+      a(class="nav-link", href="https://www.instagram.com/monlogoteam")
        img(src="img/iconos/instagram.png", class="iconos__menu", alt="icono instagram")
      li.nav-item
-      a(class="nav-link", href="#")
+      a(class="nav-link", href="https://wa.me/582416353509?text=Hola%20%F0%9F%91%8B%20me%20interesa%20sus%20servicios%2C%20pero%20tengo%20una%20duda")
        img(src="img/iconos/whatsapp.png", class="iconos__menu", alt="icono whatsapp")
    a(class="btn btn-outline-secondary d-none d-lg-inline-block mb-3 mb-md-0 ml-md-3", href="#") Contacto
