--- a/css/style.css
+++ b/css/style.css
@@ -513,8 +513,10 @@ h2 {
 .logo.logo__header img {
   width: 150px; }
 
+.hero {
+  height: 380px; }
+
 .hero-index {
-  height: 380px;
   background: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -525,6 +527,15 @@ h2 {
   padding-left: 100px; }
   .hero-index .hero__title {
     width: 45%; }
+
+.hero-service {
+  background: #26435e;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .carousel-mon {
   width: 100%;
@@ -685,6 +696,212 @@ h2 {
   overflow-x: hidden;
   overflow-y: hidden;
   position: relative; }
+
+.categories-s {
+  height: 200px;
+  margin-top: 1.5rem; }
+  .categories-s .container {
+    max-width: 1240px; }
+  .categories-s .categories__title--text h1 {
+    margin-top: 10px;
+    font-weight: 600; }
+  .categories-s .list-group {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    margin-top: 15px; }
+  .categories-s .list-group-item {
+    border-radius: 5px;
+    border: 1px solid transparent;
+    -webkit-box-shadow: -4px 6.9px 17.5px 6.5px rgba(49, 81, 114, 0.09);
+    box-shadow: -4px 6.9px 17.5px 6.5px rgba(49, 81, 114, 0.09);
+    text-align: center; }
+  .categories-s .list-group-item.active {
+    background-color: #26435e; }
+    .categories-s .list-group-item.active:hover {
+      background-color: #1a3046; }
+  .categories-s .list-group-item-action {
+    width: auto;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    font-family: "Roboto Condensed", sans-serif;
+    font-style: normal;
+    font-size: 20px;
+    font-weight: 600; }
+  .categories-s .list-group-item-action:first-child {
+    margin-left: 45px; }
+  .categories-s .tab-content > .active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+
+.categories__s {
+  height: 800px;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto; }
+  .categories__s .categories__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    padding-top: 1rem; }
+  .categories__s .categories__box-1 {
+    width: 300px;
+    height: 560px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    -webkit-box-shadow: -8.5px 14.7px 27.6px 1.5px rgba(181, 189, 196, 0.3);
+    box-shadow: -8.5px 14.7px 27.6px 1.5px rgba(181, 189, 196, 0.3);
+    margin-left: 10px;
+    padding: 1.8rem;
+    padding-bottom: 0;
+    position: relative; }
+  .categories__s .categories__box-2 {
+    width: 330px;
+    background-color: #ffffff;
+    border-radius: 20px;
+    -webkit-box-shadow: -8.5px 14.7px 27.6px 1.5px rgba(181, 189, 196, 0.3);
+    box-shadow: -8.5px 14.7px 27.6px 1.5px rgba(181, 189, 196, 0.3);
+    margin-left: 50px;
+    padding: 1.8rem;
+    position: relative;
+    top: 6rem; }
+
+.fase .container-fluid {
+  padding-right: 0;
+  padding-left: 0; }
+
+.explanation {
+  height: 700px;
+  background: -webkit-gradient(linear, left bottom, left top, from(#eef0f1), to(#ffffff));
+  background: -webkit-linear-gradient(bottom, #eef0f1 0%, #ffffff 100%);
+  background: -o-linear-gradient(bottom, #eef0f1 0%, #ffffff 100%);
+  background: linear-gradient(to top, #eef0f1 0%, #ffffff 100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+  .explanation .container-fluid {
+    max-width: 1150px; }
+  .explanation .explanation-1 {
+    padding-top: 1.5rem; }
+
+.box-explanation {
+  height: 830px;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#26435e), to(#315172));
+  background-image: -webkit-linear-gradient(bottom, #26435e, #315172);
+  background-image: -o-linear-gradient(bottom, #26435e, #315172);
+  background-image: linear-gradient(to top, #26435e, #315172);
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  .box-explanation .boxes--fly-1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+    position: relative;
+    left: -40px; }
+  .box-explanation .boxes__img--fly-1 {
+    height: 200px;
+    width: 250px;
+    -webkit-box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    position: relative;
+    border-radius: 10px;
+    background-color: #f3d531;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-right: 20px;
+    margin-left: 20px; }
+  .box-explanation .boxes__text--fly-1 {
+    height: 200px;
+    width: 550px;
+    background-color: #ffffff;
+    -webkit-box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    padding: 1.5rem;
+    border-radius: 10px;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    margin-right: 30px; }
+  .box-explanation .boxes__img--fly-1, .box-explanation .boxes__text--fly-1 {
+    position: relative;
+    left: 80px; }
+  .box-explanation .boxes--fly-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 2rem;
+    padding-bottom: 1rem; }
+  .box-explanation .boxes__img--fly-2 {
+    height: 200px;
+    width: 250px;
+    -webkit-box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    position: relative;
+    border-radius: 10px;
+    background-color: #315172;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    margin-left: 20px;
+    margin-right: 80px; }
+  .box-explanation .boxes__text--fly-2 {
+    height: 200px;
+    width: 550px;
+    background-color: #ffffff;
+    -webkit-box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    padding: 1.5rem;
+    border-radius: 10px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0; }
+  .box-explanation .boxes__img--fly-2, .box-explanation .boxes__text--fly-2 {
+    position: relative;
+    left: 160px; }
+  .box-explanation .boxes--fly-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-top: 2rem;
+    padding-bottom: 1rem; }
+  .box-explanation .boxes__text--fly-3 {
+    height: 200px;
+    width: 820px;
+    background-color: #ffffff;
+    -webkit-box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    padding: 1.5rem;
+    border-radius: 10px;
+    margin-left: 50px;
+    margin-right: 80px;
+    position: relative;
+    left: 80px; }
+    .box-explanation .boxes__text--fly-3 .boxes--text {
+      width: 65%; }
+  .box-explanation .boxes__text--fly-4 {
+    height: 200px;
+    width: 200px;
+    background-color: #ffffff;
+    -webkit-box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    box-shadow: -1.8px 4.7px 32.7px 5.3px rgba(39, 92, 20, 0.22);
+    padding: 1.5rem; }
+    .box-explanation .boxes__text--fly-4.right {
+      border-bottom-left-radius: 10px;
+      border-top-left-radius: 10px; }
+    .box-explanation .boxes__text--fly-4.left {
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px; }
+  .box-explanation .blur {
+    -webkit-filter: blur(0.8px);
+    filter: blur(0.8px);
+    opacity: .8; }
 
 .us {
   width: 100%;
