--- a/prepos/pug/index.pug
+++ b/prepos/pug/index.pug
@@ -3,13 +3,13 @@ include lib/mixins.pug
 <!DOCTYPE html>
 html(lang="en")
  include base/head.pug
-  title Vivaverde
+  title Monlogo
  body
   // menu
   include base/header.pug
 
   // hero
-  section.hero-index
+  section.hero-index.hero
    .opacity--darken
     .container
      .hero__title
@@ -54,55 +54,7 @@ html(lang="en")
           button(type="button", class="btn btn-secondary") ver más
 
   // faq
-  section.faq-index
-   .container
-    .faq-index__title
-     .faq-index__title--text
-      h1 Lorem ipsum sarel
-      .line__vertical-03
-    div(class="tab-pane fade show active", id="pills-home", role="tabpanel", aria-labelledby="pills-home-tab")
-     section.faq
-      .container
-       .row
-        .col-md-7.col-10.offset-1.offset-md-0.pb-3
-         h6.text-sm-left.text-center
-          | Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique quod placeat atque eveniet esse. Mollitia dolorum possimus eveniet.
-         ul(id="faq-list", class="wow faq-list fadeInUp", style="visibility: visible; animation-name: fadeInUp;")
-          li
-           a(data-toggle="collapse", class="collapsed aqui", href="#faq1")
-            | ¿Qué es una marca comercial?
-           .collapse#faq1
-            p
-             |La marca comercial es el signo con que 
-             |se identifica a un producto o servicio 
-             |en el mercado.
-          li
-           a(data-toggle="collapse", class="collapsed aqui", href="#faq2")
-            | ¿Qué es el registro de marca?
-           .collapse#faq2
-            p
-             |La marca comercial es el signo con que 
-             |se identifica a un producto o servicio 
-             |en el mercado.
-          li
-           a(data-toggle="collapse", class="collapsed aqui", href="#faq3")
-            | ¿Qué se puede registrar como Marca?
-           .collapse#faq3
-            p
-             |La marca comercial es el signo con que 
-             |se identifica a un producto o servicio 
-             |en el mercado.
-          li
-           a(data-toggle="collapse", class="collapsed aqui", href="#faq4")
-            | ¿Qué son las clases de productos y servicios?
-           .collapse#faq4
-            p
-             |La marca comercial es el signo con que 
-             |se identifica a un producto o servicio 
-             |en el mercado.
-         a(href="#", class="d-flex justify-content-end") ver más >
-        .col-md-3.col-12.offset-md-1.offset-0.img-re
-         .img-rect
+  include components/_faq.pug
 
   // modus
   section.modus
