--- a/prepos/sass/components/_categories.scss
+++ b/prepos/sass/components/_categories.scss
@@ -38,3 +38,89 @@
     overflow-y: hidden;
     position: relative;
 }
+.categories-s {
+    height: 200px;
+    margin-top: 1.5rem;
+    .container {
+        max-width: 1240px;
+    }
+    .categories__title {
+        &--text h1 {
+            margin-top: 10px;
+            font-weight: 600;
+        }
+    }
+    .list-group {
+        flex-direction: row;
+        margin-top: 15px;
+    }
+    .list-group-item {
+        border-radius: 5px;
+        border: 1px solid transparent;
+        box-shadow: $shadow4;
+        text-align: center;
+    }
+    .list-group-item.active {
+        background-color: $color-variation;
+        &:hover {
+            background-color: $color-alert;
+        }
+    }
+    .list-group-item-action {
+        width: auto;
+        padding-right: 30px;
+        padding-left: 30px;
+        margin-left: 15px;
+        margin-right: 15px;
+        font-family: $font1;
+        font-style: normal;
+        font-size: $fontS2;
+        font-weight: 600;
+    }
+    .list-group-item-action:first-child {
+        margin-left: 45px;
+    }
+    .tab-content > .active {
+        display: flex;
+    }
+}
+
+.categories__s {
+    height: 800px;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+   .categories__box {
+        display: flex;
+        position: relative;
+        padding-top: 1rem;
+    }
+    .categories__box-1 {
+        width: 300px;
+        height: 560px;
+        background-color: $color-lighting;
+        border-radius: 20px;
+        box-shadow: $shadow3;
+        margin-left: 10px;
+        padding: 1.8rem;
+        padding-bottom: 0;
+        position: relative;
+    }
+    .categories__box-2 {
+        width: 330px;
+        background-color: $color-lighting;
+        border-radius: 20px;
+        box-shadow: $shadow3;
+        margin-left: 50px;
+        padding: 1.8rem;
+        position: relative;
+        top: 6rem;
+    }
+}
+
+.fase {
+    .container-fluid {
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
