--- a/prepos/sass/style.scss
+++ b/prepos/sass/style.scss
@@ -13,9 +13,10 @@
 @import "base/_tables.scss";
 
 @import "components/_header.scss";
-@import "components/_hero_index.scss";
+@import "components/_hero.scss";
 @import "components/_carousel.scss";
 @import "components/_categories.scss";
+@import "components/_text.scss";
 @import "components/_us.scss";
 @import "components/_faq.scss";
 @import "components/_modus.scss";
